fixed more alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -146,7 +146,7 @@
 }
 .lover-content{
     /* border: 2px solid tomato; */
-    /* padding: 10px 30px; */
+    padding: 10px 30px;
     /* display: flex;
     justify-content: space-between;
      */
